Fix off center header on landing page

--- a/client/src/pages/LandingPage/LandingPage.css
+++ b/client/src/pages/LandingPage/LandingPage.css
@@ -1,6 +1,9 @@
 .landing-page {
     text-align: center;
     padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .landing-page__img {
